--- a/style.css
+++ b/style.css
@@ -80,3 +80,9 @@ main {
     padding: 10px 2cqw;
     display: flex;
 }
+
+.box-empty {
+    width: 300px;
+    height: 200px;
+    background-color: yellow;
+}
