--- a/style.css
+++ b/style.css
@@ -8,19 +8,15 @@
 }
 
 body {
+
 }
 
 main {
     width: 100%;
     height: 100vh;
     display: flex;
+    justify-content: center;
 }
-
-/* #sidebar {
-    width: 350px;
-    height: 100vh;
-    background-color: green;
-} */
 
 #tasks {
     width: 80%;
@@ -61,27 +57,40 @@ main {
     border-radius: 7px;
     border: none;
     background-color: #59a9de;
+    color: #fff;
+    font-weight: bold;
     cursor: pointer;
     transition: .3s;
 }
 
 .box-input button:hover {
     background-color: #5292bc;
-
 }
 
 .box-list {
-    width: 680px;
+    width: 690px;
     height: 400px;
-    margin-top: 70px;
+    margin-top: 70px;   
+    
+    display: flex;
+    flex-direction: column;
+}
 
+.text-box{
+    display: flex;
+    justify-content: center;
+}
+
+.box-list .text-boxEmpty {
+    font-size: 30px;
+    color: #ccc;
 }
 
 .box-list li {
     background-color: #f5f4f4;
     margin-bottom: 7px;
     list-style: none;
-    padding: 10px 2cqw;
+    padding: 10px 12px;
     display: flex;
 
     border-radius: 7px;
@@ -109,4 +118,21 @@ main {
     width: 300px;
     height: 200px;
     background-color: yellow;
+}
+
+.btnRemoveAll {
+    margin-bottom: 20px;
+    width: 150px;
+    padding: 15px 0;
+    border-radius: 7px;
+    border: none;
+    background-color: #59a9de;
+    cursor: pointer;
+    color: #fff;
+    font-weight: bold;
+    transition: .3s;
+}
+
+.btnRemoveAll:hover {
+    background-color: #5292bc;
 }
