--- a/style.css
+++ b/style.css
@@ -8,8 +8,26 @@
 }
 
 body {
-
+    width: 100%;
+    height: 100%;
+    background-image: url('images/bg-3.jpg');
+    background-size: cover;
 }
+
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #59a9de;
+    border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #5292bc;
+}
+
 
 main {
     width: 100%;
@@ -34,6 +52,10 @@ main {
     align-items: center;
 }
 
+.box-text h1 {
+    color: #fff;
+}
+
 .box-input {
     margin-top: 30px;
 }
@@ -45,6 +67,8 @@ main {
     border-radius: 7px;
     outline: none;
     border: 1px solid #ccc;
+
+    font-size: 15px;
 }
 
 .box-input input:focus {
@@ -69,15 +93,15 @@ main {
 
 .box-list {
     width: 690px;
-    height: 800px;
-    margin-top: 70px;   
+    height: 700px;
+    margin-top: 50px;   
     
     display: flex;
     flex-direction: column;
 
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 
-    overflow-y: scroll;
+    overflow-y: scroll;    
 }
 
 .text-box{
@@ -91,7 +115,7 @@ main {
 }
 
 .box-list li {
-    background-color: #f5f4f4;
+    background-color: #ffffff;
     margin-bottom: 7px;
     list-style: none;
     padding: 10px 12px;
@@ -101,6 +125,12 @@ main {
     flex: 1;
     justify-content: center;
 
+    color: #000;
+
+}
+
+.box-list li:hover {
+    background-color: #a3a2a2;
 }
 
 .box-list li div{
@@ -111,7 +141,7 @@ main {
 }
 
 .box-list li i {
-    color: #131313;
+    color: #000;
     transition: .3s;
 }
 
@@ -129,9 +159,7 @@ main {
 }
 
 
-.box-list li:hover {
-    background-color: #d2d1d1;
-}
+
 
 .box-empty {
     width: 300px;
@@ -154,4 +182,43 @@ main {
 
 .btnRemoveAll:hover {
     background-color: #5292bc;
+}
+
+
+@media (max-width: 770px) {
+    .box-text {
+        width: 500px;
+    }
+
+    .box-input input  {
+        width: 400px;
+    }
+
+    .box-list {
+        width: 490px;
+        height: 700px;
+    }
+}
+
+@media (max-width: 580px) {
+    .box-text {
+        width: 350px;
+    }
+
+    .box-text h1 {
+        font-size: 26px;
+    }
+
+    .box-input input  {
+        width: 250px;
+    }
+
+    .box-list {
+        width: 340px;
+        height: 700px;
+    }
+
+    .box-list .text-boxEmpty {
+        font-size: 22px;
+    }
 }
