--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: 'Ubuntu';
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     width: 100%;
     height: 100%;
@@ -215,7 +219,7 @@ main {
 
     .box-list {
         width: 340px;
-        height: 700px;
+        height: 400px;
     }
 
     .box-list .text-boxEmpty {
