--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ main {
 
 .box-input input:focus {
     border: 2px solid #5292bc;
+    scale: 0;
 }
 
 .box-input button {
@@ -192,6 +193,7 @@ main {
 @media (max-width: 770px) {
     .box-text {
         width: 500px;
+        margin-top: 40px;
     }
 
     .box-input input  {
@@ -225,7 +227,7 @@ main {
 
     .box-list {
         width: 340px;
-        height: 100px;
+        height: 300px;
     }
 
     .box-input button {
