--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 body {
     width: 100%;
     height: 100%;
-    background-image: url('images/bg-3.jpg');
+    background-image: url('images/bg.jpg');
     background-size: cover;
 }
 
@@ -77,7 +77,7 @@ main {
 
 .box-input input:focus {
     border: 2px solid #5292bc;
-    scale: 0;
+    scale: 1;
 }
 
 .box-input button {
