--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ main {
 
 
 @media (max-width: 770px) {
+
     .box-text {
         width: 500px;
         margin-top: 40px;
@@ -210,7 +211,8 @@ main {
 
     body{
         width: 100%;
-        height: 100vh;
+        height: 100%;
+        overflow-y: hidden;
     }
 
     .box-text {
