--- a/style.css
+++ b/style.css
@@ -234,7 +234,8 @@ main {
     }
 
     .box-input button {
-        height: 48px;
+        height: 50px;
+        margin-top: -1px;
     }
 
     .box-list .text-boxEmpty {
